# fastapilearning

./: README.md
fast_zero/: app.py  pyproject.toml
fast_zero/fast_zero/: app.py
fast_zero/tests/: test_app.py
