[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "breno.oliveira",email = "brenooalves2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
